--- a/templates/base.html
+++ b/templates/base.html
@@ -7,120 +7,76 @@
 {% endcomment %}
 
 <!DOCTYPE html>
-<!--
-This is a starter template page. Use this page to start your new project from
-scratch. This page gets rid of all links and provides the needed markup only.
--->
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>PnbChrono</title>
+    <head>
+        <meta charset="UTF-8">
 
-    {% bootstrap_css %}
+        <title>{% block title %}PnbParKeepr{% endblock %}</title>
+        {% bootstrap_css %}
 
-    <!-- My style -->
-    <link href="{% static "css/styles.css" %}" rel="stylesheet" type="text/css" />
+        <!-- My style -->
+        <link href="{% static "css/styles.css" %}" rel="stylesheet" type="text/css" />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
-    {% block head %}{% endblock %}
+        {% block head %}{% endblock %}
 
-  </head>
-  <body>
-    <!-- Nav Bar -->
-    <div class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">PNBChrono</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+    </head>
+    <body>
+        <header>
+            {% block navbar %}{% include 'navbar.html' %}{% endblock %}
+        </header>
+        <!-- bootstrap_messages -->
+        {% bootstrap_messages %}
+        <!-- bootstrap_messages end -->
+
+        <!-- Content Wrapper. Contains page content -->
+        {% if not user.is_anonymous %}
+            <div class="container">
+                {# Display django.contrib.messages as Bootstrap alerts #}
+                {% bootstrap_messages %} 
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                <div class="breadcrumb">
+                    {% block breadcrumb %}
+                    {% endblock %}
+                </div>
+                <h1>
+                    {% block page-header %}TODO{% endblock %}
+                </h1>
+            </div>
+
+            {% block page-content %}TODO{% endblock %}
+        {% else %}
+            {% block page-anonymous %}<h1>Not Logged</h1>{% endblock %}
+        {% endif %}
+        {% include 'pagination.html' %}
+
+        {% bootstrap_javascript %}
+
+        <!-- Optionally, you can add Slimscroll and FastClick plugins.
+            Both of these plugins are recommended to enhance the
+            user experience. Slimscroll is required when using the
+            fixed layout. 
+            <script src="{% static "js/base.js" %}" type="text/javascript"></script>
+            <script> $( document ).ready(function() { base.init() }); </script>
+            -->
+            {% block tail %}{% endblock %}
+
             {% if user.is_anonymous %}
-              <li>
-              </li>
-            {% else %}
-              <li>
-              </li>
-              <li>
-              </li>
-              <li>
-              </li>
-              <li>
-              </li>
+            {% trans "last connection" %}
+            {{ user.last_login }}
+            {{ user.last_login|naturaltime }}
             {% endif %}
-              <li>
-                <a href="{% url 'about'       %}">
-                  <button class="btn btn-default">{% trans "About"    %}</button>
-                </a>
-              </li>
-              <li>
-              </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- Nav Bar end -->
-    
-    <!-- bootstrap_messages -->
-    {% bootstrap_messages %}
-    <!-- bootstrap_messages end -->
-
-    <!-- Content Wrapper. Contains page content -->
-{% if not user.is_anonymous %}
-    <div class="container">
-      {# Display django.contrib.messages as Bootstrap alerts #}
-      {% bootstrap_messages %} 
-      {% if messages %}
-      <ul class="messages">
-          {% for message in messages %}
-          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-      </ul>
-      {% endif %}
-      <div class="breadcrumb">
-        {% block breadcrumb %}
-        {% endblock %}
-      </div>
-      <h1>
-        {% block page-header %}TODO{% endblock %}
-      </h1>
-    </div>
-
-      {% block page-content %}TODO{% endblock %}
-
-{% else %}
-      {% block page-anonymous %}
-        <h1>Not Logged<h1>
-      {% endblock %}
-{% endif %}
-{% include 'pagination.html' %}
-
-    {% bootstrap_javascript %}
-
-    <!-- Optionally, you can add Slimscroll and FastClick plugins.
-          Both of these plugins are recommended to enhance the
-          user experience. Slimscroll is required when using the
-          fixed layout. 
-    <script src="{% static "js/base.js" %}" type="text/javascript"></script>
-    <script> $( document ).ready(function() { base.init() }); </script>
-          -->
-    {% block tail %}{% endblock %}
-
-    {% if user.is_anonymous %}
-      {% trans "last connection" %}
-      {{ user.last_login }}
-      {{ user.last_login|naturaltime }}
-    {% endif %}
-  </body>
+    </body>
 </html>
