--- a/PnbPartKeepr/templates/PnbPartKeepr/part_list.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/part_list.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
+
+{% load bootstrap4 %}
+{% load font_awesome %}
+
 {% load i18n %}
 {% load static %}
-{% load bootstrap4 %}
 {% load humanize %}
 
 {% comment %}
@@ -15,21 +18,6 @@ Part of {{name}}.
 
 {% block page-content %}
 <div class="container-fluid">
-    <div class="rows">
-        <div class="col-md-10">
-            <div class="dropdown pull-left">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    {{ owner|default:'all' }}
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="{% url "PnbPartKeepr_part_list" %}">{% trans 'all' %}</a></li>
-                    {% for t in owner_list %}
-                    <li><a href="{% url "PnbPartKeepr_part_list" owner=t.id %}">{{ t }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </div>
     <table id="glucose-table" class="table display responsive" width="100%">
         <tr>
             <th scope="col">{% trans "Id"               %}</th>
@@ -42,28 +30,20 @@ Part of {{name}}.
             <th scope="col">{% trans "Action"           %}</th>
         </tr>
 
-        {% for part in object_list %}
-        {% comment %}
-        onclick="document.location='"{% url "PnbPartKeepr_part_show" id=part.id %}';"
-        {% endcomment %}
-        <tr >
-            <td>{{ part.id                                                                                  }}</td>
-            <td>{{ part.name                                                                                }}</td>
-            <td>{% include "PnbPartKeepr/cell_img_name.html" with elem=part.footprint                       %}</td>
-            <td>{{ part.stockLevel                                                                          }}</td>
-            <td>{% include "PnbPartKeepr/cell_img_name.html" with elem=part.storageLocation                 %}</td>
-            <td>{% include "PnbPartKeepr/cell_name.html"     with elem=part.category                        %}</td>
-            <td>{{ part.createDate|naturaltime                                                              }}</td>
-            <td>{% include "PnbPartKeepr/cell_action.html"   with id=part.id entity="PnbPartKeepr_part"     %}</td>
+        {% for p in object_list %}
+        <tr onclick="document.location='{% url "PnbPartKeepr_part_detail" pk=p.id %}';" >
+            <td>{{ p.id                                                                                  }}</td>
+            <td>{{ p.name                                                                                }}</td>
+            <td>{% include "PnbPartKeepr/cell_img_name.html" with elem=p.footprint                       %}</td>
+            <td>{{ p.stockLevel                                                                          }}</td>
+            <td>{% include "PnbPartKeepr/cell_img_name.html" with elem=p.storageLocation                 %}</td>
+            <td>{% include "PnbPartKeepr/cell_name.html"     with elem=p.category                        %}</td>
+            <td>{{ p.createDate|naturaltime                                                              }}</td>
+            <td>{% include "PnbPartKeepr/cell_action.html"   with id=p.id entity="PnbPartKeepr_part"     %}</td>
         </tr>
         {% empty %}
         {% trans "No vehicle" %}
         {% endfor %}
-        {% comment %}
-        <td><a href="{% url "PnbPartKeepr_part_detail" p.id %}"><button class="btn btn-defaults"><span class="glyphicon glyphicon-eye-open"></span></button></a></td>
-        <td><a href="{% url "PnbPartKeepr_part_delete"    p.id %}"><button class="btn btn-defaults"><span class="glyphicon glyphicon-remove"  ></span></button></a></td>
-        <td>{% include 'session_viewer/vehicle_icon_list.html' %}</td>
-        {% endcomment %}
     </table>
 
         {% comment %}
