--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load font_awesome %}
 {% load static %}
 {% load humanize %}
 {% load i18n %}
@@ -12,10 +13,12 @@
         <meta charset="UTF-8">
 
         <title>{% block title %}PnbPartKeepr{% endblock %}</title>
+        {% fa_css %}
         {% bootstrap_css %}
 
         <!-- PnbPartKeepr style -->
         <link href="{% static "PnbPartKeepr/css/styles.css" %}" rel="stylesheet" type="text/css" />
+        <link href="{% static "PnbPartKeepr/css/open-iconic-bootstrap.css" %}" rel="stylesheet" type="text/css" />
         <!-- My style -->
         <link href="{% static "css/styles.css" %}" rel="stylesheet" type="text/css" />
 
@@ -46,8 +49,11 @@
             {% endif %}
             <h1>{% block page-header %}TODO{% endblock %}</h1>
         </div>
+
         {% block page-content %}TODO{% endblock %}
-        {% include 'pagination.html' %}
+        {% if is_paginated %}
+        {% bootstrap_pagination page_obj %}
+        {% endif %}
 
         {% if user.is_anonymous %}
         {% trans "last connection" %}
@@ -61,15 +67,8 @@
             **************************************************
         -->
 
-        {% bootstrap_javascript %}
-        <!-- Optionally, you can add Slimscroll and FastClick plugins.
-            Both of these plugins are recommended to enhance the
-            user experience. Slimscroll is required when using the
-            fixed layout. 
-            <script src="{% static "js/base.js" %}" type="text/javascript"></script>
-            <script> $( document ).ready(function() { base.init() }); </script>
-            -->
         {% block tail %}{% endblock %}
 
+        {% bootstrap_javascript jquery='full' %}
     </body>
 </html>
