--- a/PnbPartKeepr/templates/PnbPartKeepr/footprint_detail.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/footprint_detail.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load bootstrap4 %}
-{% load fontawesome %}
 
 {% load static %}
 {% load humanize %}
@@ -9,34 +8,41 @@
 {% comment %}
 {% endcomment %}
 
-{% block page-header %}
-{% trans "Footprint" %}{{ footprint.name }}
-{% endblock %}
+{% block page-header %}{% trans "Footprint" %} {{ footprint.id }}{% endblock %}
 
 {% block page-content %}
 <div>
-    <dl class="row">
-
-        <th class="col-md-1">{% trans "Name"             %}</th>
-        <td class="col-md-1">{{ part.name }}</td>
-
-        <th class="col-md-2">{% trans "Footprint"        %}</th>
-        <td class="col-md-1">{% include "PnbPartKeepr/cell_img_name_link.html" with entity="PnbPartKeepr_footprint" elem=part.footprint %}</td>
-
-        <th class="col-md-2">{% trans "Created"          %}</th>
-        <td class="col-md-1">{{ part.createDate|naturaltime }}</td>
-
-        <th class="col-md-2">{% trans "Stock level"      %}</th>
-        <td class="col-md-1">{{ part.stockLevel }}</td>
-
-        <th class="col-md-2">{% trans "Stock location"   %}</th>
-        <td class="col-md-3">{% include "PnbPartKeepr/cell_img_name_link.html" with entity="PnbPartKeepr_storageLocation" elem=part.storageLocation %}</td>
-
-        <th class="col-md-2">{% trans "Category"         %}</th>
-        <td class="col-md-6">{% include "PnbPartKeepr/cell_name.html" with elem=part.category %}</td>
-
-    </dl>
-    {% include "PnbPartKeepr/cell_action.html" with id=part.id entity="PnbPartKeepr_part" %}
+    <table class="table">
+        <tr>
+            <th>{% trans "Name"             %}</th>
+            <td>{{ footprint.name }}</td>
+        </tr>
+        <tr>
+            <th>{% trans "Category"         %}</th>
+            <td>{% include "PnbPartKeepr/cell_name.html" with elem=footprint.category %}</td>
+        </tr>
+    </table>
 </div>
+<div>
+    <table class="table">
+        <tr>
+            <th>{% trans "Image"        %}</th>
+            <th>{% trans "Attachments"  %}</th>
+        </tr>
+        <tr>
+            <td>{% include "PnbPartKeepr/detail_img.html" with elem=footprint %}</td>
+            <td>
+                <ul>
+                    {% for f in footprint.footprintattachment_set.all %}
+                    <li><a href="{{ f.content.url }}">{{ f.filename }}</a></li>
+                    {% empty %}
+                    {% trans "No attachment" %}
+                    {% endfor %}
+                </ul>
+            </td>
+        </tr>
+    </table>
+</div>
+{% include "PnbPartKeepr/button_action.html" with id=footprint.id entity="PnbPartKeepr_footprint" %}
 {% endblock %}
 
