--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,6 +27,7 @@
                 {% include "navbar_item.html" with routeName="pnbpartkeepr.footprint.list" label="Footprints" %}
                 {% include "navbar_item.html" with routeName="pnbpartkeepr.storagelocation.list" label="Storage locations" %}
                 {% include "navbar_item.html" with routeName="pnbpartkeepr.project.list" label="Projects" %}
+                {% include "navbar_item.html" with routeName="pnbpartkeepr.projectrun.list" label="Project Run" %}
                 {% include "navbar_item.html" with routeName="pnbpartkeepr.distributor.list" label="Distributors" %}
                 {% include "navbar_item.html" with routeName="pnbpartkeepr.manufacturer.list" label="Manufacturers" %}
                 {% include "navbar_item_categories_list.html" %}
