--- a/PnbPartKeepr/templates/PnbPartKeepr/projectrun_list.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/projectrun_list.html
@@ -15,17 +15,14 @@
 <div class="d-flex justify-content-around pnbpartkeepr-search-bar">
     <div class="pnbpartkeepr-search-item">
         <div class="pnbpartkeepr-search-title">
-            {% trans "Projects" %}
+            {% trans "Project Run" %}
         </div>
     </div>
     <div class="pnbpartkeepr-search-item">
-            {% include "PnbPartKeepr/search_list.html" with name="name"         value=request.GET.name%}
+            {% include "PnbPartKeepr/search_list.html" with name="project"         value=request.GET.project_set%}
     </div>
     <div class="pnbpartkeepr-search-item">
-        {% include "PnbPartKeepr/search_list.html" with name="description"  value=request.GET.description%}
-    </div>
-    <div class="pnbpartkeepr-search-item">
-        <a href="{% url "pnbpartkeepr.project.create" %}">
+        <a href="{% url "pnbpartkeepr.projectrun.create" %}">
             <button class="btn btn-primary">
                 <span class="fas fa-plus"></span>
                 {% trans 'Add a New one' %}
@@ -36,9 +33,9 @@
 <table class="table">
     <tr>
         <th scope="col">{% trans "Id"               %}</th>
-        <th scope="col">{% trans "Name"             %}</th>
-        <th scope="col">{% trans "Owner"            %}</th>
-        <th scope="col">{% trans "Desciption"       %}</th>
+        <th scope="col">{% trans "date"             %}</th>
+        <th scope="col">{% trans "Project"          %}</th>
+        <th scope="col">{% trans "Quantity"         %}</th>
         <th scope="col">{% trans "Action"           %}</th>
     </tr>
     {% for p in object_list %}
@@ -48,13 +45,13 @@
         class="pnbpartkeepr-elem-list"
         >
         <td>{{ p.id }}</td>
-        <td>{{ p.name }}</td>
-        <td>{{ p.owner }}</td>
-        <td>{{ p.description|truncatechars:40 }}</td>
+        <td>{{ p.runDateTime|naturaltime }}</td>
+        <td>{% include "PnbPartKeepr/cell_name_link.html"   with elem=p.project %}</td>
+        <td>{{ p.quantity }}</td>
         <td>{% include "PnbPartKeepr/cell_action.html"   with elem=p %}</td>
     </tr>
     {% empty %}
-    {% include "PnbPartKeepr/empty_list.html" with label="No Project" %}
+    {% include "PnbPartKeepr/empty_list.html" with label="No run" %}
     {% endfor %}
 </table>
 {% endblock %}
