--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block page-header %}{% trans "Logged out!" %}{% endblock %}
 {% block page-content %}{% trans "Thanks for you visite!" %}{% endblock %}
